# personal-expenses-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPROVEMENTS.md  LICENSE  README.md  alembic.ini  expenses-tracker.spec  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.py  seed_data.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 353e83e9a124_initial_migration_with_categories_and_.py  64a38d947f6f_add_exchange_rates_table.py  69d6f5f816a8_add_audit_log_table.py  a1b2c3d4e5f6_add_recurring_fields_to_transactions.py  b2c3d4e5f6a7_add_deleted_at_to_transactions.py  c3c47ff3f3aa_merge_heads.py  c4d5e6f7a8b9_merge_recurring_and_exchange_heads.py  ced4bd2deb17_add_budgets_table.py  e7934e007a74_add_automation_config_table.py  f1a2b3c4d5e6_add_backup_enabled_to_automation_config.py
docs/: architecture.md  charts.md  cli.md  contributing.md  export.md  gui.md  index.md  installation.md  security.md  testing.md  usage.md
expenses_tracker/: __init__.py  __main__.py  automation.py  automation_dialog.py  chart_panel.py  chart_viewer.py  charts.py  cli.py  cloud_sync.py  cloud_sync_dialog.py  db.py  di.py  exporters.py  gui.py  gui_dialogs.py  i18n.py  importers.py  logging_config.py  models.py  schemas.py  security.py  theme.py  utils.py
expenses_tracker/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json
expenses_tracker/services/: __init__.py  category_suggestion_service.py  currency_service.py  database_service.py  export_service.py  state_service.py  transaction_service.py
expenses_tracker/tabs/: __init__.py  budget_tab.py  register_tab.py  stats_tab.py  transactions_tab.py
resources/: expenses-tracker.desktop
scripts/: add_language.py  build_deb.sh  build_linux.sh  build_macos.sh  build_rpm.sh  build_windows.ps1
tests/: conftest.py  test_architecture.py  test_automation.py  test_automation_extended.py  test_category_suggestion.py  test_charts.py  test_charts_extended.py  test_cli.py  test_cli_extended.py  test_cloud_sync.py  test_cloud_sync_extended.py  test_currency_service.py  test_database_service.py  test_db.py  test_db_extended.py  test_di_integration.py  test_exporters.py  test_gui_logic.py  test_i18n.py  test_importers.py  test_models.py  test_property_based.py  test_schemas.py  test_security.py  test_security_extended.py  test_transaction_service.py
